--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="digitsensitive">
+    <meta name="author" content="digitsensitive" />
     <title>phaser3-typescript</title>
-    <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/styles.css" />
     <script src="dist/bundle.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1>phaser3-typescript</h1>
+      <h1>dragon battle</h1>
       <div id="game"></div>
     </div>
   </body>
